@startuml
class Main
class PrinterManager
enum FilamentType
class MultiColor
class Print
abstract class Printer
class PrintTask
class Spool
class StandardFDM
class HousedPrinter

Main o--> PrinterManager
Main ..> FilamentType
Main ..> Spool

HousedPrinter --|> StandardFDM

MultiColor --|> StandardFDM
MultiColor o--> Spool

Printer ..> Spool
Printer ..> Print

PrintTask o--> Print
PrintTask --> FilamentType

Spool --> FilamentType

StandardFDM --|> Printer
StandardFDM o--> Spool
StandardFDM ..> Print

PrinterManager *--> Printer
PrinterManager o--> Print
PrinterManager o--> Spool
PrinterManager o--> PrintTask
PrinterManager ..> StandardFDM
PrinterManager ..> HousedPrinter
PrinterManager ..> MultiColor
PrinterManager ..> FilamentType
@enduml
